# text_classification_with_transformers

./: .gitignore  Dockerfile  LICENSE  README.md  evaluate.sh  finetune.sh  pyproject.toml
examples/: sample.csv
examples/livedoor/: README.md  livedoor.py
src/: dataset.py  dataset_test.py  evaluate.py  finetune.py  model.py  model_test.py
